Fix layout on mobile

--- a/client/src/styles/app.css
+++ b/client/src/styles/app.css
@@ -88,6 +88,10 @@ body {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
 }
 
+.navbar a {
+  text-decoration: none;
+}
+
 .navbar-brand {
   float: left;
   height: 50px;
